force-app/main/default/objects/brideas_Categories__c/brideas_Categories__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>AC Ideas Custom Categories</label>
</CustomObject>