force-app/main/default/objects/brideas_Categories__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Setup item position within list</description>
    <inlineHelpText>Setup item position within list</inlineHelpText>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>