force-app/main/default/objects/brideas_Categories__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <label>Parent</label>
    <length>50</length>
    <type>Text</type>
</CustomField>