force-app/main/default/objects/brideas_Categories__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <description>Assigned Ideas Zone</description>
    <inlineHelpText>Used to define the Community where to display current category</inlineHelpText>
    <label>Zone Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>